# multithreading_http_server

./: Cargo.toml  README.md  config.json
examples/: server.rs
public/: a.txt  py.cgi
src/: config.rs  logger.rs  main.rs  router.rs  shutdown.rs  utils.rs
src/http/: mod.rs  request.rs  response.rs
